--- a/src/app/pages/preview/components/podcast-preview.component.html
+++ b/src/app/pages/preview/components/podcast-preview.component.html
@@ -25,4 +25,5 @@
       <div class="speakers-content mt-5" [innerHTML]="content.content"></div>
     </div>
   </div>
+  <dsod-references [references]="content.references"></dsod-references>
 </div>
