--- a/src/app/pages/preview/components/video-preview.component.html
+++ b/src/app/pages/preview/components/video-preview.component.html
@@ -20,6 +20,7 @@
       <div class="article-content" [innerHTML]="content.content"></div>
     </div>
   </div>
+  <dsod-references [references]="content.references"></dsod-references>
   <div class="row" *ngFor="let essay of content.visualEssays">
     <div class="col-lg-12" *ngIf="essay.visualEssayImages">
       <dsod-essay-images-carousel [visualEssayImages]="essay.visualEssayImages"></dsod-essay-images-carousel>
@@ -41,6 +42,11 @@
   <div class="row">
     <div class="col-lg-12">
       <dsod-gallery [photosUrls]="content.photoUrls"></dsod-gallery>
+      <div class="row">
+      <div class="col-lg-4" *ngFor="let topic of content.relativeTopicList">
+        <dsod-related-content [content]="topic" [contentTypeName]="content.contentTypeName"></dsod-related-content>
+      </div>
+    </div>
     </div>
   </div>
 </div>
