--- a/src/app/pages/video/containers/video-page/video-page.component.html
+++ b/src/app/pages/video/containers/video-page/video-page.component.html
@@ -23,6 +23,7 @@
           </div>
           <dsod-video-player [content]="(pageContent$ | async)?.content"></dsod-video-player>
           <dsod-video-content [content]="(pageContent$ | async)?.content"></dsod-video-content>
+          <dsod-references [references]="(pageContent$ | async)?.references"></dsod-references>
           <div class="row" *ngFor="let essay of (pageContent$ | async)?.visualEssays">
             <div class="col-lg-12" *ngIf="essay.visualEssayImages">
               <dsod-essay-images-carousel [visualEssayImages]="essay.visualEssayImages"></dsod-essay-images-carousel>
