--- a/src/app/shared/components/related-content/related-content.component.html
+++ b/src/app/shared/components/related-content/related-content.component.html
@@ -1,4 +1,5 @@
 <div class="block-content">
+  <img *ngIf="thumbnailUrl" class="img-thumbnail" [src]="thumbnailUrl" />
   <h2 class="topic-title mb-1">{{content.title}}</h2>
   <p>...<a role="button" (click)="navigateTo($event)">more</a></p>
 </div>
