--- a/src/app/shared/components/related-content/related-content.component.scss
+++ b/src/app/shared/components/related-content/related-content.component.scss
@@ -5,17 +5,16 @@
     background: #f8f8f8;
     padding: 15px;
     height: 100%;
-
-
+    .img-thumbnail {
+      width: 100%;
+    }
     h2.topic-title {
       font-size: 20px;
       padding-top: 15px;
       line-height: 30px;
     }
-
     p {
       font-size: 18px;
-
       a {
         color: $deep-cerulean;
         cursor: pointer;
