--- a/src/app/pages/preview/components/article-preview.component.html
+++ b/src/app/pages/preview/components/article-preview.component.html
@@ -38,7 +38,8 @@
   <div class="row">
     <div class="col-lg-12">
       <dsod-gallery [photosUrls]="content.photoUrls"></dsod-gallery>
-    <div class="row">
+      <h2 class="section-title" *ngIf="content.relativeTopicList">Related Content</h2>
+      <div class="row">
       <div class="col-lg-4" *ngFor="let topic of content.relativeTopicList">
         <dsod-related-content [content]="topic" [contentTypeName]="content.contentTypeName"></dsod-related-content>
       </div>
