--- a/src/app/pages/preview/containers/preview.component.html
+++ b/src/app/pages/preview/containers/preview.component.html
@@ -10,5 +10,8 @@
 </div>
 </div>
 <ng-template #other>
-  <dsod-articel-preivew [content]="(pageContent$ | async)?.content"></dsod-articel-preivew>
+  <dsod-articel-preivew [content]="(pageContent$ | async)"></dsod-articel-preivew>
 </ng-template>
+<div style="height: 100%; width: 100%; position: fixed;left: 0; top: 0;" [ngClass]="{'hide-loader':!isLoading}">
+  <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="medium" color="#fff" type="ball-scale-multiple"></ngx-spinner>
+</div>
