--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,6 +3,7 @@
 @import "../styles/base/buttons";
 @import "../styles/base/profile";
 @import "../styles/base/select";
+@import "../styles/base/tab";
 
 /* width */
 ::-webkit-scrollbar {
