--- a/src/app/pages/education/components/education-sub-category/education-sub-category.component.html
+++ b/src/app/pages/education/components/education-sub-category/education-sub-category.component.html
@@ -3,4 +3,16 @@
   <div class="filter-container">
 
   </div>
+  <div class="category-item-container">
+    <dsod-education-item-card></dsod-education-item-card>
+    <dsod-education-item-card></dsod-education-item-card>
+    <dsod-education-item-card></dsod-education-item-card>
+    <dsod-education-item-card></dsod-education-item-card>
+    <dsod-education-item-card></dsod-education-item-card>
+    <dsod-education-item-card></dsod-education-item-card>
+    <dsod-education-item-card></dsod-education-item-card>
+    <dsod-education-item-card></dsod-education-item-card>
+    <dsod-education-item-card></dsod-education-item-card>
+    <dsod-education-item-card></dsod-education-item-card>
+  </div>
 </div>
