--- a/src/app/pages/video/components/video-content/video-content.component.scss
+++ b/src/app/pages/video/components/video-content/video-content.component.scss
@@ -2,11 +2,15 @@
 
 :host {
   .video-content-inner {
+   /deep/ iframe {
+     height: 70vh !important;
+     position: relative !important;
+   }
     /deep/ p {
       font-size: 20px;
 
       &:nth-child(1) {
-        display: none;
+        display: block;
       }
 
       &:nth-child(4) {
