--- a/src/app/pages/preview/components/video-preview.component.html
+++ b/src/app/pages/preview/components/video-preview.component.html
@@ -10,13 +10,15 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="md-5 mt-5">
-        <dsod-video-player [content]="content.content"></dsod-video-player>
+        <div *ngIf="content.featuredMedia" class="article-thumbnail" style="margin-top:20px;">
+          <img [src]=getUrl(content.featuredMedia.code.thumbnail) class="img-fluid" alt="">
+        </div>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-lg-12">
-      <div class="article-content" [innerHTML]="content.content"></div>
+    <div class="article-content" [innerHTML]="contentString"></div>
     </div>
   </div>
   <dsod-references [references]="content.references"></dsod-references>
