--- a/src/app/pages/education/components/education-sub-category/education-sub-category.component.html
+++ b/src/app/pages/education/components/education-sub-category/education-sub-category.component.html
@@ -1,5 +1,5 @@
 <div class="sub-category-container">
-  <p class="title">Orthodontics</p>
+  <p class="title">{{categoryInfo.title}}</p>
   <div class="filter-container">
 
   </div>
