iframe postion fixes

--- a/src/app/pages/article/components/article-content/article-content.component.html
+++ b/src/app/pages/article/components/article-content/article-content.component.html
@@ -1,2 +1,2 @@
-<div class="article-content" *ngIf="content" [innerHTML]="content.content">
+<div class="article-content" *ngIf="content" [innerHTML]="contentString">
 </div>
