--- a/src/app/pages/article/components/article-content/article-content.component.scss
+++ b/src/app/pages/article/components/article-content/article-content.component.scss
@@ -1,6 +1,20 @@
  @import 'variables';
 
  .article-content {
+   /deep/ div {
+     max-width: none !important;
+     width: 100% !important;
+
+     div {
+       padding-top: 0 !important;
+     }
+   }
+
+   /deep/ iframe {
+     height: 70vh !important;
+     position: relative !important;
+   }
+
    /deep/ p {
      font-size: 20px;
 
@@ -19,15 +33,6 @@
        font-size: 20px;
        line-height: 35px;
        margin-bottom: 25px;
-
-       &:first-letter {
-         float: left;
-         font-size: 70px;
-         line-height: 60px;
-         padding-top: 4px;
-         padding-right: 8px;
-         padding-left: 3px;
-       }
      }
 
      a {
