--- a/src/app/pages/article/containers/article-page/article.component.html
+++ b/src/app/pages/article/containers/article-page/article.component.html
@@ -4,7 +4,7 @@
       <div class="col-xl-9">
         <div class="article-content">
           <dsod-article-media [content]="pageContent$ | async"></dsod-article-media>
-          <dsod-article-content [content]="pageContent$ | async"></dsod-article-content>
+          <dsod-article-content [content]="(pageContent$ | async)?.content"></dsod-article-content>
           <dsod-references [references]="(pageContent$ | async)?.references"></dsod-references>
           <div class="row" *ngFor="let essay of (pageContent$ | async)?.visualEssays">
             <div class="col-lg-12" *ngIf="essay.visualEssayImages">
