--- a/src/app/pages/video/components/video-content/video-content.component.scss
+++ b/src/app/pages/video/components/video-content/video-content.component.scss
@@ -2,10 +2,20 @@
 
 :host {
   .video-content-inner {
-   /deep/ iframe {
-     height: 70vh !important;
-     position: relative !important;
-   }
+    /deep/ div {
+      max-width: none !important;
+      width: 100% !important;
+
+      div {
+        padding-top: 0 !important;
+      }
+    }
+
+    /deep/ iframe {
+      height: 70vh !important;
+      position: relative !important;
+    }
+
     /deep/ p {
       font-size: 20px;
 
@@ -19,16 +29,6 @@
         font-size: 22px;
         line-height: 35px;
         margin-bottom: 25px;
-
-        &:first-letter {
-          float: left;
-          font-size: 70px;
-          line-height: 60px;
-          padding-top: 4px;
-          padding-right: 8px;
-          padding-left: 3px;
-        }
-
       }
 
       a {
