--- a/src/app/pages/home/components/latest-item/latest-item.component.html
+++ b/src/app/pages/home/components/latest-item/latest-item.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="col-md-7">
-      <dsod-topic [topic]="latestTopic" [showImage]="false" [showHeader]="true" styleFor="content-lg">
+      <dsod-topic [topic]="latestTopic" [showImage]="false" [showHeader]="true" styleFor="content-lg" [showRating]=true>
       </dsod-topic>
     </div>
   </div>
