--- a/src/app/pages/dso-practice/components/dso-practice/dso-practice.component.html
+++ b/src/app/pages/dso-practice/components/dso-practice/dso-practice.component.html
@@ -1,6 +1,6 @@
 <div class="dso-practice">
   <div class="dso-practice-banner">
-    <img src="../assets/images/dso-practice-banner.png" alt="">
+    <img src="assets/images/dso-practice-banner.png" alt="">
     <div class="banner-overlay"></div>
     <div class="banner-caption">
       <h1 class="text-white">Slogan Here</h1>
