--- a/src/app/pages/home/components/latest/latest.component.html
+++ b/src/app/pages/home/components/latest/latest.component.html
@@ -6,7 +6,7 @@
       <dsod-rating [rating]="latestTopics[0].avgCommentRating"></dsod-rating>
     </div>
     <div class="latest-block-thumbnail">
-      <img src={{latestTopics[0].featuredMedia.code.originalUrl}} class="img-fluid" alt="Feautred Thumbnail Large">
+      <img src={{latestTopics[0].featuredMedia?.code.originalUrl}} class="img-fluid" alt="Feautred Thumbnail Large">
       <a href="" class="read-about">
         <img *ngIf="latestTopics[0].contentTypeName=='Articles'" src="assets/images/article-icon.png" alt="">
         <img *ngIf="latestTopics[0].contentTypeName=='Videos'" src="assets/images/youtube-icon.png" alt="">
