--- a/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.html
+++ b/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.html
@@ -25,7 +25,7 @@
         <div class="col-lg-4">
           <section class="sponsors-ortho">
             <div>
-              <dsod-media-content title="implant Dentisty" [placeholderImageSrc]="post.featuredMedia.code.originalUrl"
+              <dsod-media-content title="implant Dentisty" [placeholderImageSrc]="post.featuredMedia?.code.originalUrl"
                 [title]="post.categoryName">
               </dsod-media-content>
             </div>
