--- a/src/assets/styles/base/_tab.scss
+++ b/src/assets/styles/base/_tab.scss
@@ -22,6 +22,7 @@
     .dsod-tab {
       background-color: #F8F8F8;
       padding: 50px 200px 100px;
+      min-height: calc(100vh - 603px);
     }
   }
 }
