added bannerImg on FromOurSponsors page

--- a/src/app/pages/sponsors/components/sponsor-content/sponsor-content.component.html
+++ b/src/app/pages/sponsors/components/sponsor-content/sponsor-content.component.html
@@ -1,4 +1,4 @@
-<div class="sponsors-container"
+<div class="sponsor-content-container"
   infiniteScroll
   [infiniteScrollDistance]="0.05"
   (scrolled)="onScroll()">
