--- a/src/app/pages/sponsors/components/sponsor-content/sponsor-content.component.scss
+++ b/src/app/pages/sponsors/components/sponsor-content/sponsor-content.component.scss
@@ -1,5 +1,4 @@
-.sponsors-container {
-  padding: 100px 0 0;
+.sponsor-content-container {
   .title {
     text-align: center;
     font-size: 38px;
