--- a/src/app/shared/components/topic/topic.component.scss
+++ b/src/app/shared/components/topic/topic.component.scss
@@ -5,6 +5,7 @@
     font-family: $Arial;
     // margin: 15px 0;
     background: #f8f8f8;
+    height: 100%;
 
     .topic-block-header {
       display: flex;
