--- a/src/app/pages/dso-practice/components/dso-practice-tabs/dso-practice-tab.component.html
+++ b/src/app/pages/dso-practice/components/dso-practice-tabs/dso-practice-tab.component.html
@@ -3,3 +3,4 @@
       <dsod-topic [topic]="post" [showImage]="true" [showHeader]="true" styleFor="content-lg" [showRating]=false></dsod-topic>
   </div>
 </div>
+<dsod-pracrices-sposnors-post [contentTypeId]="contentTypeId"></dsod-pracrices-sposnors-post>
