--- a/src/app/pages/dso-practice/components/sponsors-posts/sponsors-post.component.html
+++ b/src/app/pages/dso-practice/components/sponsors-posts/sponsors-post.component.html
@@ -1,6 +1,6 @@
 <div class="practice-sponsors">
   <div class="container-fluid">
-    <div class="row" *ngFor="let topic of (sponsoredTopics$ | async)">
+    <div class="row mb-5" *ngFor="let topic of (sponsoredTopics$ | async)">
       <div class="col-md-6">
         <div class="sponsor-desc">
           <div class="sponsor-header mb-3">
