--- a/src/app/pages/dso-practice/containers/dso-practice/dso-practice.component.scss
+++ b/src/app/pages/dso-practice/containers/dso-practice/dso-practice.component.scss
@@ -1,10 +1,15 @@
 @import "variables";
 
 .dso-practice {
-  margin-top: -96px;
-
   .dso-practice-banner {
     position: relative;
+    max-width: 1145px;
+    margin: 0 auto;
+    width: 100%;
+    height: 50vh;
+    // background: url('../../../../assets/images/dso-practice-banner.png');
+    background: url("../../../../../assets/images/dso-practice-banner.png") no-repeat right top;
+    background-size: cover;
 
     img {
       width: 100%;
@@ -79,6 +84,11 @@
               border-right: 1px solid #ccc;
             }
           }
+        }
+      }
+      /deep/ .tab-content{
+        .tab-pane{
+          min-height: 600px;
         }
       }
     }
