--- a/src/app/pages/preview/components/content.scss
+++ b/src/app/pages/preview/components/content.scss
@@ -8,6 +8,16 @@
      div {
        padding-top: 0 !important;
      }
+
+      span {
+        position: relative !important;
+        top: auto !important;
+        right: auto !important;
+        bottom: auto !important;
+        left: auto !important;
+        width: auto !important;
+        height: auto !important;
+      }
    }
 
    /deep/ iframe {
