--- a/src/app/pages/home/components/featured-topics/featured-topics.component.scss
+++ b/src/app/pages/home/components/featured-topics/featured-topics.component.scss
@@ -3,135 +3,9 @@
 
 .feautred-topics {
   font-family: $Arial;
-
-  .feautred-block {
-    margin: 15px 0;
-    background: #f8f8f8;
-    height: 100%;
-
-    .feautred-block-header {
-      display: flex;
-      justify-content: space-between;
-      padding: 21px 15px 9px;
-
-      h4 {
-        color: $color-primary;
-        font-size: 22px;
-      }
-
-      .topic-rating {
-        margin-left: 10px;
-        min-width: 117px;
-
-        span {
-          display: inline-block;
-          height: 20px;
-          width: 20px;
-          line-height: 20px;
-          text-align: center;
-          border-radius: 3px;
-
-          &.filled {
-            color: #fff;
-            background: $color-primary;
-          }
-
-          &.un-filled {
-            color: #fff;
-            background: #d1d1d1;
-          }
-        }
-      }
-    }
-
-    .feautred-block-thumbnail {
-      position: relative;
-      border-top: 3px solid $mine_grey;
-
-      >img {
-        width: 100%;
-      }
-
-      a.read-about {
-        position: absolute;
-        display: inline-block;
-        left: 25px;
-        bottom: 25px;
-      }
-    }
-
-    .feautred-block-content {
-      padding: 15px 30px;
-
-      h2.topic-title {
-        font-weight: 500;
-        font-size: 35px;
-        color: $black;
-      }
-
-      em {
-        font-size: 20px;
-        font-weight: 500;
-
-        a.read-about {
-          margin-left: 10px;
-        }
-      }
-
-      p {
-        font-size: 22px;
-        line-height: 36px;
-
-        a {
-          color: $deep-cerulean;
-        }
-      }
-    }
-  }
-
-  .feautred-block-sm {
-    .feautred-block-thumbnail {
-      a.read-about {
-        bottom: 40px;
-      }
-    }
-
-    .feautred-block-content {
-      padding: 15px;
-
-      h2.topic-title {
-        font-size: 22px;
-        border-top: 1px solid #c0cad1;
-        padding-top: 15px;
-        line-height: 30px;
-      }
-
-      p {
-        font-size: 17px;
-        line-height: 25px;
-      }
-    }
-  }
-}
-
-@media only screen and (max-width:1680px) {
-  .feautred-topics {
-    .feautred-block {
-      .feautred-block-header {
-        h4 {
-          font-size: 20px;
-        }
-      }
-
-      .feautred-block-content {
-        h2.topic-title {
-          font-size: 20px;
-        }
-
-        em {
-          font-size: 18px;
-        }
-      }
+  .content-lg{
+    /deep/ .topic-block{
+      height: auto;
     }
   }
 }
