--- a/src/app/pages/sponsors/components/sponsor-content/sponsor-content.component.html
+++ b/src/app/pages/sponsors/components/sponsor-content/sponsor-content.component.html
@@ -2,23 +2,27 @@
   infiniteScroll
   [infiniteScrollDistance]="0.05"
   (scrolled)="onScroll()">
-  <h2 class="title">From Our Sponsors</h2>
-  <tabset class="dsod-tab-set">
-    <tab heading="All" customClass="dsod-tab" (select)="onChangeFilter($event)">
-      <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
-    </tab>
-    <tab heading="Articles" customClass="dsod-tab" (select)="onChangeFilter($event)">
-      <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
-    </tab>
-    <tab heading="Videos" customClass="dsod-tab" (select)="onChangeFilter($event)">
-      <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
-    </tab>
-    <tab heading="Podcasts" customClass="dsod-tab" (select)="onChangeFilter($event)">
-      <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
-    </tab>
-    <tab heading="Visual Essay" customClass="dsod-tab" (select)="onChangeFilter($event)">
-      <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
-    </tab>
-  </tabset>
+  <div class="">
+    <h2 class="title">From Our Sponsors</h2>
+    <div class="tabs-wrapper">
+      <tabset>
+        <tab heading="All" (select)="onChangeFilter($event)">
+          <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
+        </tab>
+        <tab heading="Articles" (select)="onChangeFilter($event)">
+          <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
+        </tab>
+        <tab heading="Videos" (select)="onChangeFilter($event)">
+          <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
+        </tab>
+        <tab heading="Podcasts" (select)="onChangeFilter($event)">
+          <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
+        </tab>
+        <tab heading="Visual Essay" (select)="onChangeFilter($event)">
+          <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
+        </tab>
+      </tabset>
+    </div>
+  </div>
 </div>
 <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="medium" color="#fff" type="ball-scale-multiple"></ngx-spinner>
