--- a/src/app/pages/sponsors/container/sponsors-container.component.scss
+++ b/src/app/pages/sponsors/container/sponsors-container.component.scss
@@ -1,13 +1,20 @@
-.image-header-container {
-  background-image: url('../../../../assets/images/sponsors_header.png');
-  height: 50vh;
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
-  position: relative;
-  width: 60%;
-  margin: auto;
+@import 'variables';
+
+.header-container {
+  background-color: $alabaster_white;
+  .image-header-container {
+    background-image: url('../../../../assets/images/sponsors_header.png');
+    height: 50vh;
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    position: relative;
+    width: 60%;
+    margin: auto;
+  }
 }
+
 .content-wrapper {
   padding-top: 50px;
+  background-color: $alabaster_white;
 }
