--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -33,6 +33,10 @@ $black: #000000;
 $black-8: rgba(0, 0, 0, 0.8);
 $bg-red: #ca0a13;
 $bg-blue: #6fc9d3;
+$lisbon-brown: #3D3921;
+$thunderbird: #CA1C13;
+$dusty-gray: #989898;
+
 
 $baseFontSize: 16; // Font Family
 $neue_hgd_Black: 'Haas Grot Disp 95';
