--- a/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.scss
+++ b/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.scss
@@ -78,4 +78,13 @@
       }
     }
   }
+  .load-more-container {
+    padding: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .btn-load-more {
+      width: 250px;
+    }
+  }
 }
