--- a/src/app/pages/sponsors/components/sponsor-content/sponsor-content.component.html
+++ b/src/app/pages/sponsors/components/sponsor-content/sponsor-content.component.html
@@ -1,28 +1,23 @@
-<div class="sponsor-content-container"
-  infiniteScroll
-  [infiniteScrollDistance]="0.05"
-  (scrolled)="onScroll()">
-  <div class="">
-    <h2 class="title">From Our Sponsors</h2>
-    <div class="tabs-wrapper">
-      <tabset>
-        <tab heading="All" (select)="onChangeFilter($event)">
-          <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
-        </tab>
-        <tab heading="Articles" (select)="onChangeFilter($event)">
-          <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
-        </tab>
-        <tab heading="Videos" (select)="onChangeFilter($event)">
-          <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
-        </tab>
-        <tab heading="Podcasts" (select)="onChangeFilter($event)">
-          <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
-        </tab>
-        <tab heading="Visual Essay" (select)="onChangeFilter($event)">
-          <dsod-sponsor-posts [posts]="pageConents"></dsod-sponsor-posts>
-        </tab>
-      </tabset>
-    </div>
+<div class="sponsor-content-container">
+  <h2 class="title">From Our Sponsors</h2>
+  <div class="tabs-wrapper">
+    <tabset>
+      <tab heading="All" (select)="onChangeFilter($event)">
+        <dsod-sponsor-posts [posts]="pageConents" (loadMore)="onLoadMore()"></dsod-sponsor-posts>
+      </tab>
+      <tab heading="Articles" (select)="onChangeFilter($event)">
+        <dsod-sponsor-posts [posts]="pageConents" (loadMore)="onLoadMore()"></dsod-sponsor-posts>
+      </tab>
+      <tab heading="Videos" (select)="onChangeFilter($event)">
+        <dsod-sponsor-posts [posts]="pageConents" (loadMore)="onLoadMore()"></dsod-sponsor-posts>
+      </tab>
+      <tab heading="Podcasts" (select)="onChangeFilter($event)">
+        <dsod-sponsor-posts [posts]="pageConents" (loadMore)="onLoadMore()"></dsod-sponsor-posts>
+      </tab>
+      <tab heading="Visual Essay" (select)="onChangeFilter($event)">
+        <dsod-sponsor-posts [posts]="pageConents" (loadMore)="onLoadMore()"></dsod-sponsor-posts>
+      </tab>
+    </tabset>
   </div>
 </div>
 <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="medium" color="#fff" type="ball-scale-multiple"></ngx-spinner>
