--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -15,7 +15,7 @@
           <li><a [routerLink]="['about']">About</a></li>
           <li><a [routerLink]="['contact']">Contact Us</a></li>
           <li><a [routerLink]="['terms']">Term of Use</a></li>
-          <li><a [routerLink]="['privacypolicy']">Privacy Policy</a></li>
+          <li><a [routerLink]="['privacy-policy']">Privacy Policy</a></li>
           <li><a [routerLink]="['adpolicy']">Ad Policy</a></li>
         </ul>
       </div>
