fixed DSTP-328 for PodCast content

--- a/src/app/pages/preview/components/podcast-preview.component.html
+++ b/src/app/pages/preview/components/podcast-preview.component.html
@@ -17,7 +17,8 @@
       </div>
     </div>
     <div class="col-lg-8">
-      <dsod-audio-player [content]="content"></dsod-audio-player>
+      <!-- <dsod-audio-player [content]="content"></dsod-audio-player> -->
+      <div class="article-content" [innerHTML]="content.content"></div>
     </div>
   </div>
   <div class="row">
