--- a/src/app/pages/career/components/career/career.component.scss
+++ b/src/app/pages/career/components/career/career.component.scss
@@ -1,6 +1,6 @@
 .image-header-container {
-  background-image: url('../../../../../assets/images/career_header.png');
-  height: 50vh;
+  background-image: url('../../../../../assets/images/career_header_sm.jpg');
+  height: 400px;
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
