--- a/src/app/pages/development/components/development/development.component.scss
+++ b/src/app/pages/development/components/development/development.component.scss
@@ -1,6 +1,6 @@
 .image-header-container {
   background-image: url('../../../../../assets/images/development_header.png');
-  height: 50vh;
+  height: 400px;
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
