--- a/src/app/pages/education/container/education-container.component.scss
+++ b/src/app/pages/education/container/education-container.component.scss
@@ -1,6 +1,6 @@
 .image-header-container {
-  background-image: url('../../../../assets/images/education_header.png');
-  height: 50vh;
+  background: url('../../../../assets/images/education_header_sm.jpg');
+  height: 400px;
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
