--- a/src/app/pages/sponsors/container/sponsors-container.component.scss
+++ b/src/app/pages/sponsors/container/sponsors-container.component.scss
@@ -4,7 +4,7 @@
   background-color: $alabaster_white;
   .image-header-container {
     background-image: url('../../../../assets/images/sponsors_header.png');
-    height: 50vh;
+    height: 400px;
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
