--- a/src/app/pages/career/components/career/career.component.html
+++ b/src/app/pages/career/components/career/career.component.html
@@ -1,5 +1,11 @@
 <div>
-  <div class="image-header-container"></div>
+  <div class="image-header-container">
+    <div class="banner-overlay"></div>
+    <div class="banner-caption">
+      <h1 class="text-white">Do what you do...</h1>
+      <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur voluptate a</p> -->
+    </div>
+  </div>
 </div>
 <div class="content-wrapper">
   <div class="row">
