--- a/src/app/pages/dso-practice/containers/dso-practice/dso-practice.component.scss
+++ b/src/app/pages/dso-practice/containers/dso-practice/dso-practice.component.scss
@@ -6,9 +6,9 @@
     max-width: 1145px;
     margin: 0 auto;
     width: 100%;
-    height: 50vh;
+    height: 400px;
     // background: url('../../../../assets/images/dso-practice-banner.png');
-    background: url("../../../../../assets/images/dso-practice-banner.png") no-repeat right top;
+    background: url("../../../../../assets/images/dso-practice-banner.jpg") no-repeat right top;
     background-size: cover;
 
     img {
