--- a/src/app/pages/education/components/education-catalogue/education-catalogue.component.scss
+++ b/src/app/pages/education/components/education-catalogue/education-catalogue.component.scss
@@ -2,7 +2,7 @@
   color: #333333;
   font-size: 38px;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 .content-item-wrapper {
   display: grid;
@@ -49,6 +49,13 @@
         color: #bcbcbc;
         margin: 0;
       }
+    }
+  }
+}
+/deep/ .dsod-tab-set {
+  .tab-content {
+    .dsod-tab {
+      padding: 20px 200px 100px;
     }
   }
 }
