--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -27,3 +27,43 @@
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(110, 110, 110, 1);
 }
+
+.image-header-container {
+  position: relative;
+
+  .banner-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: rgba(0, 0, 0, 0.55);
+  }
+
+  .banner-caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    max-width: 1300px;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+
+    h1 {
+      font-size: 50px;
+      font-weight: normal;
+      margin-bottom: 50px;
+      text-align: left;
+      padding-left: 50px;
+      margin-top: 100px;
+    }
+
+    p {
+      color: $color-white;
+      font-size: 20px;
+    }
+
+  }
+}
