fix soundcloud preview issue

--- a/src/app/pages/preview/components/article-preview.component.html
+++ b/src/app/pages/preview/components/article-preview.component.html
@@ -12,7 +12,7 @@
   </div>
   <div class="row">
     <div class="col-lg-12">
-      <div class="article-content" [innerHTML]="content.content"></div>
+      <div class="article-content" [innerHTML]="contentString"></div>
     </div>
   </div>
   <dsod-references [references]="content.references"></dsod-references>
