--- a/src/app/pages/preview/components/podcast-preview.component.html
+++ b/src/app/pages/preview/components/podcast-preview.component.html
@@ -18,13 +18,13 @@
     </div>
     <div class="col-lg-8">
       <!-- <dsod-audio-player [content]="content"></dsod-audio-player> -->
-      <div class="article-content" [innerHTML]="content.content"></div>
+      <div class="article-content" [innerHTML]="contentString"></div>
     </div>
   </div>
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-lg-12">
-      <div class="speakers-content mt-5" [innerHTML]="content.content"></div>
+      <div class="speakers-content mt-5" [innerHTML]="contentString"></div>
     </div>
-  </div>
+  </div> -->
   <dsod-references [references]="content.references"></dsod-references>
 </div>
