--- a/src/app/pages/home/components/featured-topics/featured-topics.component.html
+++ b/src/app/pages/home/components/featured-topics/featured-topics.component.html
@@ -5,13 +5,29 @@
     </h2>
     <div class="row" *ngIf="featuredTopics">
       <div class="col-lg-6">
-        <div class="content-lg"  *ngFor="let topic of featuredTopics | slice : 0:2">
-        <dsod-topic [topic]="topic" [showImage]="true" [showHeader]="true" styleFor="content-lg" [showRating]=true [imgLarge]=true></dsod-topic>
-      </div>
+        <div class="content-lg" *ngFor="let topic of featuredTopics | slice : 0:1">
+          <dsod-topic [topic]="topic" [showImage]="true" [showHeader]="true" styleFor="content-lg" [showRating]=true
+            [imgLarge]=true></dsod-topic>
+        </div>
       </div>
       <div class="col-lg-6">
-        <div class="row">
-          <div class="col-xl-6 col-lg-6 col-md-6" *ngFor="let topic of featuredTopics | slice:2:6">
+        <div class="row h-100">
+          <div class="col-xl-6 col-lg-6 col-md-6" *ngFor="let topic of featuredTopics | slice:1:3">
+            <dsod-topic [topic]="topic" [showImage]="true" [showHeader]="true" styleFor="content-sm" [showRating]=true></dsod-topic>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row" *ngIf="featuredTopics">
+      <div class="col-lg-6">
+        <div class="content-lg" *ngFor="let topic of featuredTopics | slice : 3:4">
+          <dsod-topic [topic]="topic" [showImage]="true" [showHeader]="true" styleFor="content-lg" [showRating]=true
+            [imgLarge]=true></dsod-topic>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="row h-100">
+          <div class="col-xl-6 col-lg-6 col-md-6" *ngFor="let topic of featuredTopics | slice:4:6">
             <dsod-topic [topic]="topic" [showImage]="true" [showHeader]="true" styleFor="content-sm" [showRating]=true></dsod-topic>
           </div>
         </div>
