--- a/src/app/shared/components/topic/topic.component.scss
+++ b/src/app/shared/components/topic/topic.component.scss
@@ -129,6 +129,8 @@
       .excrept-content-sm {
         padding-top: 5px;
         font-size: 17px;
+        max-height: 200px;
+        overflow: hidden;
       }
     }
   }
@@ -172,7 +174,8 @@
       height: 100%;
       width: 100%;
     }
-    .img-lg{
+
+    .img-lg {
       height: 430px !important;
     }
   }
