--- a/src/app/pages/community/components/unite-viewer/unite-viewer-modal.component.html
+++ b/src/app/pages/community/components/unite-viewer/unite-viewer-modal.component.html
@@ -1,29 +1,33 @@
-<div class="modal-header" *ngIf="magazine">
-<h4 class="modal-title">{{magazine.publishDate | date :'mediumDate'}}</h4>
-  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
-<div class="modal-body" id="viewer-body">
-  <div>
-    <h2>{{magazine.contents[pageIndex].title}}</h2>
-    <span class="by" *ngIf="magazine.contents[pageIndex].author">by {{magazine.contents[pageIndex].author.fullName}}</span>
+<div *ngIf="magazine">
+  <div class="modal-header">
+    <h4 class="modal-title">{{magazine.publishDate | date :'mediumDate'}}</h4>
+    <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
-  <img class="cover" [src]="getImageUrl(magazine.contents[pageIndex].featuredMedia.code.thumbnail)" class="img-fluid"
-    alt="">
-<div class="article-content" [innerHTML]="magazine.contents[pageIndex].content"></div>
-</div>
-<div class="modal-footer">
-  <div class="row ml-auto mr-auto">
-    <div class="col-12">
-      <div class="paginator">
-        <button class="btn btn-dark text-center" (click)="onNavigation('previous')" [disabled]="pageIndex==0"><i class="fa fa-chevron-left"
-            aria-hidden="true"></i></button>
-        <span class="btn btn-light text-black">{{pageIndex +1}}</span>
-        <button class="btn btn-dark text-center" (click)="onNavigation('next')" [disabled]="pageIndex==magazine.contents.length-1"><i
-            class="fa fa-chevron-right" aria-hidden="true"></i></button>
+
+  <div class="modal-body" id="viewer-body">
+    <div>
+      <h2>{{magazine.contents[pageIndex].title}}</h2>
+      <span class="by" *ngIf="magazine.contents[pageIndex].author">by {{magazine.contents[pageIndex].author.fullName}}</span>
+    </div>
+    <img class="cover" [src]="getImageUrl(magazine.contents[pageIndex].featuredMedia?.code?.thumbnail)" class="img-fluid" alt="">
+    <div class="article-content" [innerHTML]="magazine.contents[pageIndex].content"></div>
+  </div>
+
+  <div class="modal-footer">
+    <div class="row ml-auto mr-auto">
+      <div class="col-12">
+        <div class="paginator">
+          <button class="btn btn-dark text-center" (click)="onNavigation('previous')" [disabled]="pageIndex==0"><i class="fa fa-chevron-left"
+              aria-hidden="true"></i></button>
+          <span class="btn btn-light text-black">{{pageIndex +1}}</span>
+          <button class="btn btn-dark text-center" (click)="onNavigation('next')" [disabled]="pageIndex==magazine.contents.length-1"><i
+              class="fa fa-chevron-right" aria-hidden="true"></i></button>
+        </div>
       </div>
     </div>
+    <button type="button" class="btn btn-dark" (click)="activeModal.close('Close click')">Close</button>
   </div>
-  <button type="button" class="btn btn-dark" (click)="activeModal.close('Close click')">Close</button>
 </div>
+
